@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+        - do not require release branch anymore
 
 0.004     2015-09-08
         - dependencies cleanup
